--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "StockOverflow",
+  "name": "mystock-tool",
   "version": "1.0.0",
-  "description": "air bnb for benches!",
+  "description": "Personalized stock wallet",
   "main": "index.js",
   "directories": {
     "lib": "lib",
@@ -19,15 +19,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/avelasco920/StockOverflow.git"
+    "url": "git+https://github.com/jparkSF/mystock-tool.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/avelasco920/StockOverflow/issues"
+    "url": "https://github.com/jparksf/mystock-tool/issues"
   },
-  "homepage": "https://github.com/avelasco920/StockOverflow#readme",
+  "homepage": "https://github.com/jparksf/mystock-tool#readme",
   "dependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
